software/ros2/log/build_2024-06-22_20-20-02/movement_controllers/stderr.log
  File "/home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers/IK_Solver_Node.py", line 42
    msg.position =  #3 float array
                    ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

